# gamiscreen

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  docker-compose.yml  rustfmt.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: android-apk.yml  claude-code-review.yml  claude.yml  deploy-gh-pages.yml  publish-image.yml  release-binaries.yml  test.yml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ws/klimek/gamiscreen/app/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/core/: build.gradle.kts
android/core/src/main/: AndroidManifest.xml
android/core/src/main/java/ws/klimek/gamiscreen/core/: AppConfig.kt  SessionStore.kt
android/deviceControl/: build.gradle.kts
android/deviceControl/src/main/: AndroidManifest.xml
android/deviceControl/src/main/java/ws/klimek/gamiscreen/devicecontrol/: DeviceLockController.kt
android/gradle/: libs.versions.toml
android/pwaShell/: build.gradle.kts
android/pwaShell/src/androidMain/: AndroidManifest.xml
android/pwaShell/src/androidMain/kotlin/ws/klimek/gamiscreen/pwashell/: EmbeddedPwaContent.kt  PwaShellHost.kt  SessionTokenBridge.kt
android/pwaShell/src/main/java/ws/klimek/gamiscreen/pwashell/: PwaShellHost.kt
docs/: ANDROID.md  ARCHITECTURE.md  AUTH.md  CONFIGURATION.md  DOCKER.md  INSTALL.md  SECURITY_AND_CODE_REVIEW.md  USAGE.md  WINDOWS.md
gamiscreen-client/: Cargo.toml  README.md  config.example.yaml
gamiscreen-client-linux/: Cargo.toml  README.md  config.example.yaml
gamiscreen-client-linux/src/: cli.rs  lib.rs  login.rs  main.rs
gamiscreen-client-linux/systemd/: gamiscreen-client-linux.service
gamiscreen-client/polkit/: 49-gamiscreen-lock.rules
gamiscreen-client/src/: cli.rs  config.rs  lib.rs  login.rs  main.rs  notify.rs  sse.rs  update.rs  ws.rs
gamiscreen-client/src/app/: agent.rs
gamiscreen-client/src/platform/: mod.rs  notify_common.rs
gamiscreen-client/src/platform/linux/: install.rs  lock.rs  lock_tester.rs  mod.rs  notify.rs
gamiscreen-client/src/platform/windows/: install.rs  lock.rs  mod.rs  notify.rs  service.rs  service_cli.rs  util.rs
gamiscreen-client/systemd/: gamiscreen-client.service
gamiscreen-server/: Cargo.toml  Dockerfile  build.rs  config.yaml.example
gamiscreen-server/migrations/00000000000001_init/: down.sql  up.sql
gamiscreen-server/migrations/00000000000002_task_completions/: down.sql  up.sql
gamiscreen-server/migrations/00000000000004_usage_minutes/: down.sql  up.sql
gamiscreen-server/migrations/00000000000005_reward_label/: down.sql  up.sql
gamiscreen-server/migrations/00000000000006_reward_description/: down.sql  up.sql
gamiscreen-server/migrations/00000000000007_task_submissions/: down.sql  up.sql
gamiscreen-server/migrations/00000000000008_push_subscriptions/: up.sql
gamiscreen-server/migrations/00000000000009_balance_remaining_borrowing/: down.sql  up.sql
gamiscreen-server/migrations/00000000000010_account_balance/: down.sql  up.sql
gamiscreen-server/migrations/00000000000011_task_management/: down.sql  up.sql
gamiscreen-server/src/: cli.rs  install.rs  lib.rs  main.rs
gamiscreen-server/src/server/: acl.rs  auth.rs  config.rs  mod.rs  push.rs  rate_limit.rs
gamiscreen-server/src/shared/: mod.rs  path.rs
gamiscreen-server/src/shared/api/: endpoints.rs  mod.rs  rest.rs
gamiscreen-server/src/storage/: mod.rs  models.rs  schema.rs
gamiscreen-server/systemd/: gamiscreen-server.service
gamiscreen-server/tests/: integration_scenario.rs  task_management.rs
gamiscreen-shared/: Cargo.toml
gamiscreen-shared/src/: auth.rs  domain.rs  jwt.rs  lib.rs  path.rs
gamiscreen-shared/src/api/: endpoints.rs  mod.rs  rest.rs  ts_export.rs
gamiscreen-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
gamiscreen-web/public/: manifest.webmanifest  notification-format.js  sw.js
gamiscreen-web/src/: App.tsx  api.ts  env.ts  formatTime.ts  main.tsx  nativeBridge.ts  notifications.ts  pwaVersioning.ts  storageKeys.ts  styles.css  taskHelpers.ts
gamiscreen-web/src/components/: UsageChart.tsx
gamiscreen-web/src/pages/: ChildDetailsPage.tsx  LoginPage.tsx  NotificationsPage.tsx  SettingsPage.tsx  StatusPage.tsx  TaskFormPage.tsx  TaskListPage.tsx
reverse-proxy/: Caddyfile
scripts/: android_ci.sh  build-and-push-server.sh  build-windows-client.sh  create-review-issues.sh  install-deps-rust.sh  install-deps-system.sh  install-deps-web.sh  install-deps.sh  reward_alice_10.sh
