[package]
name = "gamiscreen-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
    "signal",
] }
# reqwest = { version = "0.12", default-features = false, features = [
#     "json",
#     "rustls-tls",
# ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
directories = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
url = "2"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
rpassword = "7"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
tinytemplate = "1.2"
semver = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-eventsource = "0.6"
gamiscreen-shared = { path = "../gamiscreen-shared", features = [
    "rest-client",
] }
tokio-util = { version = "0.7" }
windows-sys = { version = "0.61.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Shutdown",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
zbus_names = "4.2"
nix = "0.30"
notify-rust = { version = "4.11.7" }

[[bin]]
name = "gamiscreen-client"
path = "src/main.rs"
