[package]
name = "gamiscreen-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []


[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3.44", features = ["macros", "serde"] }
diesel = { version = "2.1.6", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
bcrypt = "0.17"
uuid = { version = "1", features = ["v4", "serde"] }
rust-embed = "8"
mime_guess = "2"
percent-encoding = "2"
thiserror = { version = "2" }
clap = { version = "4", features = ["derive"] }
tinytemplate = "1.2"
tokio-util = { version = "0.7" }
semver = "1"
web-push = { version = "0.11.0", default-features = true }

gamiscreen-shared = { path = "../gamiscreen-shared" }

[build-dependencies]
gamiscreen-shared = { path = "../gamiscreen-shared", features = ["ts"] }
serde_json = "1"


[dev-dependencies]
tempfile = "3.23.0"
http-body-util = "0.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
base64 = "0.22"
