[package]
name = "gamiscreen-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []


[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.31"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
time = { version = "0.3.47", features = ["macros", "serde"] }
diesel = { version = "2.3.6", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "2.3.1"
chrono = { version = "0.4.43", features = ["serde"] }
bcrypt = "0.18.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
thiserror = { version = "2.0.18" }
clap = { version = "4.5.57", features = ["derive"] }
tinytemplate = "1.2.1"
tokio-util = { version = "0.7.18" }
semver = "1.0.27"
web-push = { version = "0.11.0", default-features = true }

gamiscreen-shared = { path = "../gamiscreen-shared" }

[build-dependencies]
gamiscreen-shared = { path = "../gamiscreen-shared", features = ["ts"] }
serde_json = "1.0.149"


[dev-dependencies]
tempfile = "3.24.0"
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
base64 = "0.22"
