[package]
name = "gamiscreen-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
rest-client = ["dep:reqwest", "dep:once_cell"]
ts = ["dep:ts-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
time = { version = "0.3", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = { version = "9" }

reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
once_cell = { version = "1", optional = true }
thiserror = "2"
ts-rs = { version = "11.0.1", optional = true }
