[package]
name = "gamiscreen-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
rest-client = ["dep:reqwest", "dep:once_cell"]
ts = ["dep:ts-rs"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
percent-encoding = "2.3.2"
time = { version = "0.3.47", features = ["serde"] }
base64 = "0.22.1"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }

reqwest = { version = "0.13.2", optional = true, default-features = false, features = [
    "json",
    "rustls",
] }
once_cell = { version = "1.21.3", optional = true }
thiserror = "2.0.18"
ts-rs = { version = "12.0.1", optional = true }
